--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
+    "check-lint": "npm run lint -- --fix [0-9]*.js",
     "dev": "npx babel-node main.js",
     "test": "jest",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
@@ -15,5 +15,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0"
-  }
+  },
+  "type": "module"
 }
