--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "lint": "./node_modules/.bin/eslint",
+    "lint": "eslint",
     "check-lint": "npm run lint -- --fix [0-9]*.js",
     "dev": "npx babel-node main.js",
     "test": "jest",
