--- a/0x02-ES6_classes/package.json
+++ b/0x02-ES6_classes/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "lint": "eslint",
-    "check-lint": "npm run lint -- --fix [0-9]*.js",
-    "dev": "npx babel-node main.js",
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "dev": "npx babel-node",
     "test": "jest",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
@@ -16,5 +16,5 @@
     "eslint-plugin-jest": "^27.6.1",
     "jest": "^29.7.0"
   },
-  "type": "commonjs"
+  "type": "module"
 }
