--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
-    "test": "mocha 0-calcul.test.js"
+    "test": "mocha *.test.js"
   },
   "author": "",
   "license": "ISC",
