--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,18 +1,19 @@
 {
   "name": "0x06-unittests_in_js",
   "version": "1.0.0",
-  "description": "alx project about unittests",
+  "description": "",
   "main": "0-calcul.js",
+  "dependencies": {
+    "chai": "^4.3.6",
+    "express": "^4.17.2",
+    "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "mocha": "^9.2.0"
+  },
   "scripts": {
-    "lint": "./node_modules/.bin/eslint",
-    "check-lint": "lint [0-9]*.js",
-    "test": "mocha *.test.js"
+    "test": "chai"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "mocha": "^10.3.0"
-  }
+  "license": "ISC"
 }
