--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "0-calcul.js",
   "dependencies": {
-    "chai": "^4.3.6",
+    "chai": "*",
     "express": "^4.17.2",
     "request": "^2.88.2"
   },
@@ -12,7 +12,7 @@
     "mocha": "^9.2.0"
   },
   "scripts": {
-    "test": "chai"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
